--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Examin</title>
-  <base href="/AxaximDeploy/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/f029cbd220.js" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
-<link rel="stylesheet" href="styles.09fdf4df2742faeb0ea0.css"></head>
+<link rel="stylesheet" href="styles.4e7123f43bb36cc3a8ee.css"></head>
 
 <body>
   <app-root></app-root>
