--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Examin</title>
-  <base href="/AxaximDeploy/home">
+  <base href="/AxaximDeploy/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/f029cbd220.js" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
-<link rel="stylesheet" href="styles.f5108f396076497e3a89.css"></head>
+<link rel="stylesheet" href="styles.0734bf42b529936ef80f.css"></head>
 
 <body>
   <app-root></app-root>
@@ -27,6 +27,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
-<script src="runtime-es2015.1b86e5ffa5e266c4ad7d.js" type="module"></script><script src="runtime-es5.1b86e5ffa5e266c4ad7d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.c5648532e9a6a23906a1.js" defer></script><script src="main-es2015.2901d85e348524d1e33d.js" type="module"></script><script src="main-es5.2901d85e348524d1e33d.js" nomodule defer></script></body>
+<script src="runtime-es2015.b2cf55aa8c0d911bb092.js" type="module"></script><script src="runtime-es5.b2cf55aa8c0d911bb092.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.c5648532e9a6a23906a1.js" defer></script><script src="main-es2015.2901d85e348524d1e33d.js" type="module"></script><script src="main-es5.2901d85e348524d1e33d.js" nomodule defer></script></body>
 
 </html>
